k8s/uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: uat
  name: covid-react-client
  labels:
    name: covid-react-client
    app: covid-react-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: covid-react-client
  template:
    metadata:
      name: covid-react-client
      labels:
        name: covid-react-client
        app: covid-react-client
    spec:
      containers:
        - name: covid-react-client
          imagePullPolicy: Always
          image: silasonyango93/covid-react-client:latest
          ports:
            - containerPort: 80
