k8s/uat/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: covid-react-client
  namespace: uat
  labels:
    app: covid-react-client
    name: covid-react-client
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: 80
  selector:
    app: covid-react-client
    name: covid-react-client
